# radicle-registry

./: .gitignore  .gitmodules  .sops.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  LICENSE_HEADER  README.md  default.nix  rustfmt.toml
.buildkite/: pipeline.yaml  secrets.yaml
.circleci/: config.yml
ci/: check-fixup-commits  deploy  kubeconfig.yaml  run
ci/base-image/: Dockerfile
ci/node-image/: Dockerfile
cli/: Cargo.toml  build.rs
cli/src/: account_storage.rs  commands.rs  key_pair_storage.rs  lib.rs  main.rs
cli/src/command/: account.rs  key_pair.rs  mod.rs  org.rs  other.rs  project.rs  runtime.rs  user.rs
client/: Cargo.toml
client-common/: Cargo.toml
client-common/src/: lib.rs
client-interface/: Cargo.toml
client-interface/src/: call.rs  lib.rs
client/examples/: counter.rs  getting_started.rs  project_registration.rs  transaction_signing.rs  user_registration.rs
client/src/: base.rs  call.rs  error.rs  event.rs  extrinsic.rs  interface.rs  lib.rs  memory.rs  message.rs  sync.rs  transaction.rs  with_executor.rs
client/src/backend/: emulator.rs  mod.rs  remote_node.rs  remote_node_with_executor.rs
client/tests/: end_to_end.rs
client/tests/common/: mod.rs
core/: Cargo.toml  README.md
core/src/: bytes128.rs  error.rs  id.rs  lib.rs  message.rs  messages.rs  org_id.rs  project_domain.rs  project_name.rs  state.rs  string32.rs  user_id.rs
docs/: external-attestations.md
local-devnet/: README.md  docker-compose.yaml  grafana-dashboards.yaml  grafana-datasources.yaml  prometheus.yaml  start-node.sh
local-devnet/grafana-dashboards/: network.json
memory-client/: Cargo.toml
memory-client/src/: lib.rs
node/: Cargo.toml  build.rs
node/src/: blockchain.rs  chain_spec.rs  cli.rs  command.rs  dummy_pow.rs  inherent_data.rs  logger.rs  main.rs  metrics.rs  pow_alg_config.rs  service.rs  service_customization.rs
node/src/chain_spec/: ffnet.json
node/src/pow/: blake3_pow.rs  config.rs  dummy_pow.rs  harmonic_mean.rs  mod.rs
pow-consensus/: Cargo.toml
pow-consensus/src/: lib.rs
registry-spec/: Cargo.toml
registry-spec/src/: error.rs  lib.rs  types.rs
runtime/: Cargo.toml  build.rs  curr_spec_first_impl.wasm  dev_curr_spec_first_impl.json  dev_curr_spec_last_impl.json  dev_prev_spec_last_impl.json  ffnet_genesis.wasm  latest.wasm
runtime-tests/: Cargo.toml
runtime-tests/tests/: account.rs  block_rewards.rs  checkpoing_setting.rs  checkpoint_creation.rs  checkpoint_setting.rs  id_status.rs  member_registration.rs  org_registration.rs  project_registration.rs  transfer.rs  user_registration.rs
runtime/src/: counter.rs  lib.rs  registry.rs  runtime.rs  runtime_api.rs  string32.rs  template.rs  timestamp_in_digest.rs  transaction_fee.rs  types.json
runtime/src/fees/: bid.rs  mod.rs  payment.rs
runtime/src/registry/: inherents.rs
runtime/src/runtime/: api.rs
runtime/tests/: block_rewards.rs  checkpoing_setting.rs  checkpoint_creation.rs  main.rs  org_registration.rs  project_registration.rs  registration.rs  transfer.rs  user_registration.rs
runtime/tests/common/: mod.rs
scripts/: build-chain-spec  build-client-docs  build-dev-node  build-genesis-runtime-wasm  build-release  build-runtime-wasm  check-license-headers  create-release  rebuild-chain-specs  rebuild-runtime-cache  run-dev-node  run-tests-all-runtimes  rustup-setup  update-substrate
src/: lib.rs
subxt/: Cargo.toml
subxt/src/: error.rs  extrinsic.rs  lib.rs  metadata.rs  rpc.rs  runtimes.rs
subxt/src/frame/: balances.rs  contracts.rs  system.rs
subxt/src/paint/: system.rs
subxt/src/srml/: balances.rs  system.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
