[package]
edition = "2018"
name = "radicle-registry-cli"
description = "CLI tools for interacting with the Radicle Registry"
version = "0.0.0"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[dependencies]
radicle-registry-client = { version = "0.0.0", path = "../client" }

async-std = { version = "1.4", features = ["attributes"] }
async-trait = "0.1"
derive_more = "0.99"
directories = "2.0.2"
futures = "0.3"
hex = "0.4.0"
pretty_env_logger = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
url = "1.7"


[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "f7bd10a548201cb68491f72be73115279d97f160"
