[package]
name = "radicle_registry_client_common"
version = "0.1.0"
authors = ["Thomas Scholtes <thomas@monadic.xyz>"]
edition = "2018"

[dependencies]
radicle_registry_runtime = { path = "../runtime" }
radicle_registry_client_interface = { path = "../client-interface" }

parity-scale-codec = "1.0"

[dependencies.srml-system]
git = "https://github.com/paritytech/substrate"
rev = "14345ac157f656ac032d2566b0a2dfb005b32c60"

[dependencies.srml-transaction-payment]
git = "https://github.com/paritytech/substrate"
rev = "14345ac157f656ac032d2566b0a2dfb005b32c60"

[dependencies.substrate-primitives]
git = "https://github.com/paritytech/substrate"
rev = "14345ac157f656ac032d2566b0a2dfb005b32c60"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
rev = "14345ac157f656ac032d2566b0a2dfb005b32c60"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"
rev = "14345ac157f656ac032d2566b0a2dfb005b32c60"
