[package]
name = "radicle_registry_client_common"
version = "0.1.0"
authors = ["Thomas Scholtes <thomas@monadic.xyz>"]
edition = "2018"

[dependencies]
radicle_registry_runtime = { path = "../runtime" }
radicle_registry_client_interface = { path = "../client-interface" }

parity-scale-codec = "1.0"

[dependencies.paint-system]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"

[dependencies.paint-transaction-payment]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"

[dependencies.substrate-primitives]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"
