[package]
name = "radicle_registry_client_interface"
version = "0.1.0"
authors = ["Thomas Scholtes <thomas@monadic.xyz>"]
edition = "2018"

[dependencies]
radicle_registry_runtime = { path = "../runtime" }

futures = "0.1"

[dependencies.substrate-primitives]
git = "https://github.com/paritytech/substrate"
rev = "acf86cd4b0ad4c45dbba57c2ae323531d5b71264"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
rev = "acf86cd4b0ad4c45dbba57c2ae323531d5b71264"

[dependencies.srml-support]
git = "https://github.com/paritytech/substrate"
rev = "acf86cd4b0ad4c45dbba57c2ae323531d5b71264"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"
rev = "acf86cd4b0ad4c45dbba57c2ae323531d5b71264"
