[package]
edition = "2018"
name = "radicle-registry-client"
description = "Client library to interact with Radicle Registry node"
version = "0.0.0"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[dependencies]
radicle-registry-core = { path = "../core" }
radicle-registry-runtime = { path = "../runtime" }

async-trait = "0.1"
derive_more = "0.15"
env_logger = "0.7"
failure = "0.1.7"
futures01 = { package = "futures", version = "0.1" }
futures = { version = "0.3", features = ["compat"] }
hex = "0.4.2"
jsonrpc-core-client = { version = "14.0", features = ["ws"] }
lazy_static = "1.4"
log = "0.4"
parity-scale-codec = "1.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.14"
tokio = "0.1"
url = "1.7"


[dependencies.pallet-sudo]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"
default_features = false

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-rpc-api]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-rpc]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-state-machine]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-timestamp]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dev-dependencies]
async-std = { version = "1.4", features = ["attributes"] }
rand = "0.7.2"
radicle-registry-test-utils = { path = "../test-utils"}
serial_test = "0.3.2"
