[package]
edition = "2018"
name = "radicle-registry-client"
description = "Client library to interact with Radicle Registry node"
version = "0.0.0"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[dependencies]
radicle-registry-core = { path = "../core" }
radicle-registry-runtime = { path = "../runtime" }

async-trait = "0.1"
derive_more = "0.15"
env_logger = "0.7"
failure = "0.1.7"
futures01 = { package = "futures", version = "0.1" }
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core-client = { version = "14.0", features = ["ws"] }
lazy_static = "1.4"
log = "0.4"
parity-scale-codec = "1.0"
serde = "1.0"
thiserror = "1.0.14"
tokio = "0.1"
url = "1.7"

[dependencies.radicle-registry-runtime-v11]
git = "https://github.com/radicle-dev/radicle-registry"
rev = "0acd1e5467f0b70dfdff5fc7df1b5121d73b9858"
package = "radicle-registry-runtime"
version = "=0.11.0"

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sc-rpc-api]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sp-rpc]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sp-state-machine]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dependencies.sp-timestamp]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"

[dev-dependencies]
async-std = { version = "1.4", features = ["attributes"] }
rand = "0.7.2"
radicle-registry-test-utils = { path = "../test-utils"}
serial_test = "0.3.2"
