[package]
edition = "2018"
name = "radicle-registry-core"
description = "Primitive types and functions used in the Radicle Registry"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
version = "0.0.0"
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "rand",
    "sp-core/std",
    "sp-runtime/std",
]

[dependencies]
derive-try-from-primitive = "1.0.0"
rand = { version = "0.7.2", optional = true }

[dependencies.parity-scale-codec]
default-features = false
features = ["derive", "full"]
version = "1.0.0"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "3f134a1af2462482b2868adf73a050a8da0d3934"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "3f134a1af2462482b2868adf73a050a8da0d3934"
default-features = false
