[package]
edition = "2018"
name = "radicle-registry-core"
description = "Primitive types and functions used in the Radicle Registry"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
version = "0.0.0"
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "rand",
    "serde",
    "sp-core/std",
    "sp-runtime/std",
    "thiserror",
]

[dependencies]
derive-try-from-primitive = "1.0.0"
rand = { version = "0.7.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }

[dependencies.parity-scale-codec]
default-features = false
features = ["derive", "full"]
version = "1.0.0"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"
default-features = false
