[package]
name = "radicle_registry_memory_client"
version = "0.1.0"
authors = ["Thomas Scholtes <thomas@monadic.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radicle_registry_runtime = { path = "../runtime" }
radicle_registry_client_interface = { path = "../client-interface" }

futures01 = "0.1"

[dependencies.substrate-primitives]
git = "https://github.com/paritytech/substrate"
rev = "acf86cd4b0ad4c45dbba57c2ae323531d5b71264"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
rev = "acf86cd4b0ad4c45dbba57c2ae323531d5b71264"

[dependencies.srml-support]
git = "https://github.com/paritytech/substrate"
rev = "acf86cd4b0ad4c45dbba57c2ae323531d5b71264"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"
rev = "acf86cd4b0ad4c45dbba57c2ae323531d5b71264"
