[package]
name = "radicle_registry_memory_client"
version = "0.1.0"
authors = ["Thomas Scholtes <thomas@monadic.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radicle_registry_runtime = { path = "../runtime" }
radicle_registry_client_interface = { path = "../client-interface" }
radicle_registry_client_common = { path = "../client-common" }

futures01 = "0.1"
parity-scale-codec = "1.0"

[dependencies.substrate-primitives]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"

[dependencies.paint-support]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"

[dependencies.paint-system]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"
