[package]
edition = "2018"
name = "radicle-registry-node"
description = "Full node for the Radicle Registry network"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
version = "0.0.0"
license = "GPL-3.0-only"
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
repository = "https://github.com/radicle-dev/radicle-registry"

[[bin]]
name = "radicle-registry-node"

[dependencies]
radicle-registry-runtime = { version = "0.0.0", path = "../runtime" }

async-std = "1.5.0"
blake3 = "0.2.1"
derive_more = "0.15.0"
env_logger = "0.7"
exit-future = "0.1.4"
futures = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.8"
num-bigint = "0.2.6"
num-traits = "0.2.11"
parking_lot = "0.9.0"
# TODO remove in favor of substrate_prometheus_endpoint::prometheus after substrate upgrade
prometheus = "0.8"
rand = "0.7.3"
serde = "1.0.104"
serde_json = "1.0.48"
structopt = "0.3"
tokio = { version = "0.2", features = ["rt-threaded"] }
time = "0.2"
trie-root = "0.15.2"

[dependencies.ctrlc]
features = ["termination"]
version = "3.1.3"

[dependencies.sc-basic-authorship]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-network]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-cli]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-client]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-consensus-pow]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-telemetry]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sc-transaction-pool]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-blockchain]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-consensus]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-consensus-pow]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[dependencies.substrate-prometheus-endpoint]
git = "https://github.com/paritytech/substrate"
rev = "6dc23feece77d758656651e04de964d72e9b5d34"

[build-dependencies]
vergen = "3"
