[package]
edition = "2018"
name = "radicle-registry-node"
description = "Full node for the Radicle Registry network"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
version = "0.0.0"
license = "GPL-3.0-only"
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
repository = "https://github.com/radicle-dev/radicle-registry"

[[bin]]
name = "radicle-registry-node"

[dependencies]
radicle-registry-runtime = { path = "../runtime" }

blake3 = "0.2.1"
env_logger = "0.7"
futures = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.8"
num-bigint = "0.2.6"
num-traits = "0.2.11"
rand = "0.7.3"
serde = "1.0.104"
serde_json = "1.0.48"
structopt = "0.3"
time = "0.2"

[dependencies.sc-basic-authorship]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-chain-spec]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-cli]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-client-api]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-consensus]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-consensus-pow]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-network]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-telemetry]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sc-transaction-pool]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-blockchain]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-consensus]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-consensus-pow]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-database]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[dependencies.substrate-prometheus-endpoint]
git = "https://github.com/paritytech/substrate"
rev = "v2.0.0-rc4"

[build-dependencies]
vergen = "3"
