[package]
name = "radicle-registry-runtime"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
edition = "2018"
version = "0.1.0"
license = "GPL-3.0-only"


[dependencies]
aura = { version = "2.0.0", default-features = false, package = "pallet-aura", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
balances = { version = "2.0.0", default-features = false, package = "pallet-balances", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
grandpa = { version = "2.0.0", default-features = false, package = "pallet-grandpa", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
indices = { version = "2.0.0", default-features = false, package = "pallet-indices", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
randomness-collective-flip = { version = "2.0.0", default-features = false, package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sudo = { version = "2.0.0", default-features = false, package = "pallet-sudo", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
system = { version = "2.0.0", default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
timestamp = { version = "2.0.0", default-features = false, package = "pallet-timestamp", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
transaction-payment = { version = "2.0.0", default-features = false, package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }

codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c", default-features = false}
sp-consensus-aura = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-inherents = { git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c", default-features = false}
sp-io = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }
sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }

[dependencies.paint-grandpa]
git = "https://github.com/paritytech/substrate"
rev = "dc4a8329b9c47790c25429a5df272b3648275c1b"
default_features = false
package = "paint-grandpa"

[build-dependencies]
wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate", rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c" }

[dev-dependencies]
futures = "0.1"
rand = "0.7.2"
radicle-registry-client = { path = "../client" }

[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"indices/std",
	"randomness-collective-flip/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
]
